# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli
projekti/: .coveragerc  changelog  pyproject.toml  tasks.py
projekti/data_folder/: tekstidata.txt
projekti/database_sql/: wordcloud_db.db
projekti/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
projekti/src/: data_setup.py  database.py  main.py  reader.py  ui_text.py  wordcloud.py
projekti/src/tests/: data_test.py  database_test.py  reader_test.py  setup_test.py  wordcloud_test.py
