[tool.poetry]
name = "app_project"
version = "0.1.0"
description = ""
authors = ["Martin Mäkipää <martin.makipaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
invoke = "^1.7.0"
matplotlib = "^3.5.1"
adjustText = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
